fix spacing issues with the two columns

--- a/css/weekone.css
+++ b/css/weekone.css
@@ -1,7 +1,6 @@
 body {
-  background-color: #c2fcca;
+  background-color: #f2e0ab;
 }
-
 
 .container {
   margin: 15px;
@@ -31,16 +30,20 @@ p {
 }
 
 .intro {
+  border-radius: 10px;
+  border: solid #ffdd77 6px;
+  font-family: sans-serif;
   background-color:#b0fcd1;
   margin-left: 60px
 }
 
 img {
-  border-radius: 100%;
+  border-radius: 30%;
   float: right;
   border-style: ridge;
   width: 160px;
   height: auto;
+  max-height: 50px
   margin-right: 60px;
 }
 
@@ -49,26 +52,20 @@ li {
 }
 
 .projects {
+  font-family: sans-serif;
   border-radius: 3%;
   border: inset #f7e1bb 15px;
   background-color: #fcc592;
   float: left;
-  width: 300px;
-  margin-top: 80px;
-}
-
-h2 {
-  font-family: sans-serif;
-  text-align: center;
-  font-size: 22px;
+  width: 300px
+  margin-top: 100px;
 }
 
 .hobbies {
+  font-family: sans-serif;
   border-radius: 3%;
   border: inset #f7e1bb 15px;
   background-color: #fcc592;
   float: right;
-  width: 300px;
   margin-top: 80px;
-
 }
